[package]
name = "wasm-backend"
version = "0.1.0"
authors = ["gfelber <@users.noreply.github.com>"]
edition = "2021"
license = "GPL-3"
description = "terminal backend in rust wasm"
repository = "https://github.com/gfelber/website"
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "console_log"]


[dependencies]
wasm-bindgen = "0.2.87"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
ansi_term = "0.12.1"
lazy_static = { version = "1.4.0", features = [] }
console_log = { version = "1", features = ["color"], optional = true}
cfg-if = "1.0.0"
log = { version = "0.4", features = [] }
clap = { version = "4.4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
wasm-bindgen-futures = "0.4.37"
chrono = { version = "0.4.31", features = [] }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"

[dependencies.web-sys]
version = "0.3.64"
features = [
  "Window",
  "History",
  "XmlHttpRequest",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
