[package]
name = "wasm-backend"
version = "0.1.0"
authors = ["gfelber <@users.noreply.github.com>"]
edition = "2021"
license = "GPL-3"
description = "terminal backend in rust wasm"
repository = "https://github.com/gfelber/website"
links = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "console_log"]


[dependencies]
wasm-bindgen = "0.2.93"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
ansi_term = "0.12.1"
lazy_static = { version = "1.5.0", features = [] }
console_log = { version = "1.0.0", features = ["color"], optional = true}
cfg-if = "1.0.0"
log = { version = "0.4.22", features = [] }
clap = { version = "4.5.17", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }
ron = "0.8.1"
wasm-bindgen-futures = "0.4.43"
chrono = { version = "0.4.38", features = [] }

[build-dependencies]
serde = { version = "1.0.210", features = ["derive"] }
ron = "0.8.1"

[dependencies.web-sys]
version = "0.3.70"
features = [
  "Window",
  "History",
  "XmlHttpRequest",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.43"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
